assets folder added
assets folder added

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var woocommerce_params = {"ajax_url":"\/83\/wp-admin\/admin-ajax.php","wc_ajax_u
     <div class="overlay" id="overlay">
         <div class="popup">
             <span class="close-btn" onclick="closePopup()">×</span>
-            <img src="https://videos-test.myliveeye.com/red-truck.jpg" alt="Popup Image">
+            <img src="assets/red-truck1.jpg" alt="Popup Image">
         </div>
     </div>
     <!--exp ended-->
@@ -1192,7 +1192,7 @@ var TWBBFrontendConfig = {"facebook_sdk":{"lang":"en_US","app_id":""}};
         setTimeout(() => {
             document.getElementById("overlay").classList.add("show");
             document.getElementById("main-content").classList.add("blurred");
-        }, 1000);
+        }, 2000);
 
         function closePopup() {
             document.getElementById("overlay").classList.remove("show");
