--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var woocommerce_params = {"ajax_url":"\/83\/wp-admin\/admin-ajax.php","wc_ajax_u
     <div class="overlay" id="overlay">
         <div class="popup">
             <span class="close-btn" onclick="closePopup()">×</span>
-            <img src="assets/red-truck1.jpg" alt="Popup Image">
+            <img src="assets/red-truck2.jpg" alt="Popup Image">
         </div>
     </div>
     <!--exp ended-->
@@ -734,7 +734,7 @@ var woocommerce_params = {"ajax_url":"\/83\/wp-admin\/admin-ajax.php","wc_ajax_u
 				</div>
 					</div>
 				</div>
-		<div class="elementor-element elementor-element-j6931w1r twbb_section e-con-boxed e-flex e-con e-parent" data-id="j6931w1r" data-element_type="container" id="heavy-vehicle-categories">
+		<div style="display:none;" class="elementor-element elementor-element-j6931w1r twbb_section e-con-boxed e-flex e-con e-parent" data-id="j6931w1r" data-element_type="container" id="heavy-vehicle-categories">
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-p5125jc2 elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget-tablet__width-initial twbb-category-regulate-image-height-yes elementor-products-columns-3 elementor-products-columns-mobile-1 elementor-products-columns-tablet-3 twbb-category-title-position-inside elementor-animated-item--grow tenweb-widget-slider-yes tenweb-widget-slider--full-width-mobile-yes tenweb-widget-slider--navigation-position-inside tenweb-widget-slider--full-width-yes tenweb-widget-slider--full-width-tablet-yes tenweb-widget-slider--full-width-layout-full-width tenweb-widget-slider--full-width-layout-tablet-full-width tenweb-widget-slider--full-width-layout-mobile-full-width tenweb-arrows-yes tenweb-arrows-tablet-yes tenweb-arrows-mobile-no tenweb-widget-slider--edge-arrows-disable tenweb-widget-slider--navigation-position-tablet-outside tenweb-widget-slider--navigation-position-mobile-outside tenweb-widget-slider--arrows-position-tablet-right tenweb-widget-slider--arrows-position-mobile-right tenweb-pagination-tablet-yes tenweb-pagination-mobile-yes tenweb-widget-slider--pagination-position-tablet-outside tenweb-widget-slider--pagination-position-mobile-outside tenweb-widget-slider--pagination-position-tablet-left tenweb-widget-slider--pagination-position-mobile-center elementor-wc-products elementor-widget elementor-widget-twbb_woocommerce-categories" data-id="p5125jc2" data-element_type="widget" data-settings="{&quot;slides_per_view&quot;:2,&quot;slides_per_view_mobile&quot;:1,&quot;autoplay&quot;:&quot;yes&quot;,&quot;loop&quot;:&quot;yes&quot;,&quot;speed&quot;:500,&quot;show_pagination_tablet&quot;:&quot;yes&quot;,&quot;show_pagination_mobile&quot;:&quot;yes&quot;,&quot;autoplay_speed&quot;:5000,&quot;pause_on_interaction&quot;:&quot;yes&quot;}" data-widget_type="twbb_woocommerce-categories.default">
 				<div class="elementor-widget-container">
