--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ var woocommerce_params = {"ajax_url":"\/83\/wp-admin\/admin-ajax.php","wc_ajax_u
         .popup img {
             max-width: 100%;
             border-radius: 5px;
+            height: 96vh;
         }
 
         /* Show popup */
